[117] : update readme file and github pages documentation
Signed-off-by: Aliou DIAITE <aliou.diaite@rte-france.com>

--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -21,11 +21,7 @@ SPDX-License-Identifier: CC-BY-4.0
       <a class="sidebar-nav-item{% if page.url == '/GOVERNANCE.html' %} active{% endif %}" href="{{ site.baseurl }}/GOVERNANCE.html">Governance</a>
       <a class="sidebar-nav-item{% if page.url == '/DEVELOPING.html' %} active{% endif %}" href="{{ site.baseurl }}/DEVELOPING.html">Developing</a>
       <a class="sidebar-nav-item{% if page.url == '/SCD_GENERATION.html' %} active{% endif %}" href="{{ site.baseurl }}/SCD_GENERATION.html">SCD generation process</a>
-      <ul class="nav-list ">
-        <li class="nav-list-item">
-          <a class="sidebar-nav-item{% if page.url == '/PULL_REQUESTS.html' %} active{% endif %}" href="{{ site.baseurl }}/PULL_REQUESTS.html">Pull requests</a>
-        </li>
-      </ul>
+      <a class="sidebar-nav-item{% if page.url == '/compas-sct.html' %} active{% endif %}" href="{{ site.baseurl }}/compas-sct.html">Architecture</a>
     </nav>
 
     <p>Currently v{{ site.version }}</p>
