--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -28,7 +28,7 @@ SPDX-License-Identifier: CC-BY-4.0
           <a class="sidebar-nav-item{% if page.url == '/compas-sct.html' %} active{% endif %}" href="{{ site.baseurl }}/compas-sct.html">Architecture</a>
         </li>
         <li class="nav-list-item">
-          <a class="sidebar-nav-item{% if page.url == '/javadocs/index.html' %} active{% endif %}" target="_blank" href="{{ site.baseurl }}/javadocs/index.html">Java Docs</a>
+          <a class="sidebar-nav-item{% if page.url == '/javadoc/index.html' %} active{% endif %}" target="_blank" href="{{ site.baseurl }}/javadoc/index.html">Java Docs</a>
         </li>
       </ul>
     </nav>
